tools/editor-plugin/metascript.nvim/tree-sitter/grammar.js
    program: $ => repeat($._statement),

    // =========================================================================
    // Statements
    // =========================================================================

    _statement: $ => choice(
      $.import_statement,
      $.export_statement,
      $.class_declaration,
      $.actor_declaration,
      $.interface_declaration,
      $.struct_declaration,
      $.enum_declaration,
      $.function_declaration,
      $.macro_declaration,
      $.extern_declaration,
      $.variable_declaration,
      $.type_alias_declaration,
      $.test_declaration,
      $.expect_statement,
      $.defer_statement,
      $.return_statement,
      $.unreachable_statement,
      $.if_statement,
      $.switch_statement,
      $.for_statement,
      $.for_of_statement,
      $.for_in_statement,
      $.while_statement,
      $.do_while_statement,
      $.break_statement,
      $.continue_statement,
      $.labeled_statement,
      $.macro_directive_statement,
      $.expression_statement,
      $.block,
    ),

    // =========================================================================
    // Imports / Exports
    // =========================================================================

    variable_declaration: $ => seq(
      choice('const', 'let', 'var'),
      field('name', $.identifier),
      optional($.type_annotation),
      optional(seq('=', $._expression)),
      ';',
    ),

    // Type alias with optional distinct
    block: $ => seq('{', repeat($._statement), '}'),

    if_statement: $ => prec.right(seq(
      'if', '(', $._expression, ')', $._statement,
      optional(seq('else', $._statement)),
    )),

    for_statement: $ => seq(
      'for', '(',
      choice($.variable_declaration, seq(optional($._expression), ';')),
      optional($._expression), ';',
      optional($._expression),
      ')', $._statement,
    ),

    while_statement: $ => seq('while', '(', $._expression, ')', $._statement),

    // do { body } while (condition);
    do_while_statement: $ => seq(
      'do',
      field('body', $._statement),
      'while',
      '(',
      field('condition', $._expression),
      ')',
      optional(';'),
    ),

    // switch (expr) { case value: ... default: ... }
    switch_statement: $ => seq(
      'switch',
      '(',
      field('discriminant', $._expression),
      ')',
      field('body', $.switch_body),
    ),

    switch_body: $ => seq(
      '{',
      repeat(choice($.switch_case, $.switch_default)),
      '}',
    ),

    switch_case: $ => seq(
      'case',
      field('test', $._expression),
      ':',
      repeat($._statement),
    ),

    switch_default: $ => seq(
      'default',
      ':',
      repeat($._statement),
    ),

    // for (const x of iterable) { ... }
    for_of_statement: $ => seq(
      'for',
      optional('await'),  // for await (const x of asyncIterable)
      '(',
      field('kind', choice('const', 'let', 'var')),
      field('name', $.identifier),
      'of',
      field('iterable', $._expression),
      ')',
      field('body', $._statement),
    ),

    // for (const k in obj) { ... }
    for_in_statement: $ => seq(
      'for',
      '(',
      field('kind', choice('const', 'let', 'var')),
      field('name', $.identifier),
      'in',
      field('object', $._expression),
      ')',
      field('body', $._statement),
    ),

    // break; or break label;
    break_statement: $ => seq(
      'break',
      optional(field('label', $.identifier)),
      ';',
    ),

    // continue; or continue label;
    continue_statement: $ => seq(
      'continue',
      optional(field('label', $.identifier)),
      ';',
    ),

    // label: statement
    labeled_statement: $ => seq(
      field('label', $.identifier),
      ':',
      field('body', $._statement),
    ),

    expression_statement: $ => seq($._expression, ';'),

    // =========================================================================
    // Expressions
    // =========================================================================

    _expression: $ => choice(
      $.identifier,
      $.number,
      $.string,
      $.boolean,
      $.null,
      $.undefined,
      $.this,
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.await_expression,
      $.try_expression,
      $.call_expression,
      $.generic_call_expression,
      $.member_expression,
      $.subscript_expression,
      $.deref_expression,
      $.new_expression,
      $.array,
      $.object,
      $.arrow_function,
      $.parenthesized_expression,
      $.macro_comptime,
      $.macro_emit_expr,
      $.match_expression,
      $.type_assertion_expression,
      $.update_expression,
      // JSX expressions
      $.jsx_element,
      $.jsx_fragment,
    ),

    assignment_expression: $ => prec.right(1, seq(
      field('left', choice($.identifier, $.member_expression, $.subscript_expression, $.deref_expression)),
      choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=', '>>>='),
      field('right', $._expression),
    )),

    binary_expression: $ => choice(
      prec.left(12, seq($._expression, '*', $._expression)),
      prec.left(12, seq($._expression, '/', $._expression)),
      prec.left(12, seq($._expression, '%', $._expression)),
      prec.left(11, seq($._expression, '+', $._expression)),
      prec.left(11, seq($._expression, '-', $._expression)),
      prec.left(10, seq($._expression, '<<', $._expression)),
      prec.left(10, seq($._expression, '>>', $._expression)),
      prec.left(10, seq($._expression, '>>>', $._expression)),
      prec.left(9, seq($._expression, '<', $._expression)),
      prec.left(9, seq($._expression, '>', $._expression)),
      prec.left(9, seq($._expression, '<=', $._expression)),
      prec.left(9, seq($._expression, '>=', $._expression)),
      prec.left(8, seq($._expression, '===', $._expression)),
      prec.left(8, seq($._expression, '!==', $._expression)),
      prec.left(8, seq($._expression, '==', $._expression)),
      prec.left(8, seq($._expression, '!=', $._expression)),
      prec.left(7, seq($._expression, '&', $._expression)),
      prec.left(6, seq($._expression, '^', $._expression)),
      prec.left(5, seq($._expression, '|', $._expression)),
      prec.left(4, seq($._expression, '&&', $._expression)),
      prec.left(3, seq($._expression, '||', $._expression)),
      prec.left(3, seq($._expression, '??', $._expression)),
      prec.left(2, seq($._expression, '..', $._expression)),
      prec.left(2, seq($._expression, '...', $._expression)),
      prec.left(1, seq($._expression, '|>', $._expression)),
      prec.right(13, seq($._expression, '**', $._expression)),
    ),

    call_expression: $ => prec(18, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // Generic call: foo<T>(x), obj.method<T>(x)
    // External scanner resolves '<' as type args (not comparison)
    arguments: $ => seq('(', optional(commaSep1($._expression)), ')'),

    member_expression: $ => prec(18, seq(
      field('object', $._expression),
      '.',
      field('property', $._identifier_or_keyword),
    )),

    // Subscript/index expression: obj[key], arr[0]
    arrow_function: $ => prec.dynamic(1, prec.right(seq(
      optional('async'),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', choice(
        $.identifier,                         // x => ...
        $.arrow_function_parameters,          // (x, y) => ... or () => ...
      )),
      optional(field('return_type', $.type_annotation)),  // : ReturnType
      '=>',
      field('body', choice($.block, $._expression)),
    ))),

    // Arrow function parameters - like regular parameters but in parens
    identifier: $ => token(/[a-zA-Z_$][a-zA-Z0-9_$]*/),

    // Backtick-quoted operator identifier: `==`, `<`, `!=`, `[]`, `[]=`, `+`, etc.
    // Used as function/method names for operator overloading.
    // Higher precedence than template_string to avoid ambiguity in function-name position.
    number: $ => choice(
      /0[xX][0-9a-fA-F_]+[n]?/,
      /0[bB][01_]+[n]?/,
      /0[oO][0-7_]+[n]?/,
      /\d[0-9_]*(\.[0-9_]+)?([eE][+-]?\d+)?/,
      /\d[0-9_]*n/,
    ),

    string: $ => choice(
      // Use token() to make strings atomic - prevents // inside strings from being parsed as comments
      token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),
      token(seq("'", repeat(choice(/[^'\\]/, /\\./)), "'")),
      $.template_string,
    ),

    _identifier_or_keyword: $ => choice(
      $.identifier,
      $.operator_identifier,
      $._contextual_keyword,
    ),

    boolean: $ => choice('true', 'false'),
